@@ -1,3 +1,5 @@
+HEAD
+	+ Now the module has support to store ad messages
 2.2.15
 	+ Show a note when no backup credentials are found even if
 	  Disaster Recovery is available for the server
